Vlc.DotNet/Core/Interop/InteropMethods.cs


        [DllImport("libvlc")]
        internal static extern int libvlc_audio_get_volume(IntPtr p_instance, ref libvlc_exception_t p_exception);

        [DllImport("libvlc")]
        internal static extern void libvlc_audio_set_volume(IntPtr p_instance, int i_volume, ref libvlc_exception_t p_exception);

        [DllImport("libvlc")]
        internal static extern int libvlc_audio_get_track_count(IntPtr p_media_player, ref libvlc_exception_t p_exception);

        [DllImport("libvlc")]
        internal static extern int libvlc_audio_get_track(IntPtr p_media_player, ref libvlc_exception_t p_exception);

        [DllImport("libvlc")]
        internal static extern void libvlc_audio_set_track(IntPtr p_media_player, int i_track, ref libvlc_exception_t p_exception);

        [DllImport("libvlc")]
        internal static extern int libvlc_audio_get_channel(IntPtr p_instance, ref libvlc_exception_t p_exception);

        [DllImport("libvlc")]
        internal static extern void libvlc_audio_set_channel(IntPtr p_instance, int i_channel, ref libvlc_exception_t p_exception);

        #endregion

        #region Event Manager Methods

        [DllImport("libvlc")]
        internal static extern void libvlc_event_attach(IntPtr p_event_manager, VlcEventType i_event_type, VlcCallback f_callback, IntPtr p_user_data, ref libvlc_exception_t p_exception);

        [DllImport("libvlc")]
        internal static extern void libvlc_event_detach(IntPtr p_event_manager, VlcEventType i_event_type, VlcCallback f_callback, IntPtr p_user_data, ref libvlc_exception_t p_exception);

        [DllImport("libvlc")]
        internal static extern string libvlc_event_type_name(VlcEventType event_type);

        #endregion

        #region Logging Methods

        [DllImport("libvlc")]
        internal static extern uint libvlc_get_log_verbosity(IntPtr p_instance, ref libvlc_exception_t p_exception);

        [DllImport("libvlc")]
        internal static extern void libvlc_set_log_verbosity(IntPtr p_instance, uint level, ref libvlc_exception_t p_exception);

        [DllImport("libvlc")]
        internal static extern IntPtr libvlc_log_open(IntPtr p_instance, ref libvlc_exception_t p_exception);

        [DllImport("libvlc")]
        internal static extern void libvlc_log_close(IntPtr p_log, ref libvlc_exception_t p_exception);

        [DllImport("libvlc")]
        internal static extern uint libvlc_log_count(IntPtr p_log, ref libvlc_exception_t p_exception);

        [DllImport("libvlc")]
        internal static extern void libvlc_log_clear(IntPtr p_log, ref libvlc_exception_t p_exception);

        [DllImport("libvlc")]
        internal static extern IntPtr libvlc_log_get_iterator(IntPtr p_log, ref libvlc_exception_t p_exception);

        [DllImport("libvlc")]
        internal static extern void libvlc_log_iterator_free(IntPtr p_iter, ref libvlc_exception_t p_exception);

        [DllImport("libvlc")]
        internal static extern bool libvlc_log_iterator_has_next(IntPtr p_iter, ref libvlc_exception_t p_exception);

        [DllImport("libvlc")]
        internal static extern libvlc_log_message libvlc_log_iterator_next(IntPtr p_iter, ref libvlc_log_message p_buffer, ref libvlc_exception_t p_exception);

        #endregion

        #region MediaList Methods

        #region internal static extern IntPtr libvlc_media_list_new(IntPtr p_instance, ref libvlc_exception_t p_exception)

        /// <summary>
        /// 
        /// </summary>
        /// <param name="p_instance"></param>
        /// <param name="p_exception"></param>
        /// <returns></returns>
        [DllImport("libvlc")]
        internal static extern IntPtr libvlc_media_list_new(IntPtr p_instance, ref libvlc_exception_t p_exception);

        #endregion

        #region internal static extern void libvlc_media_list_release(IntPtr p_mlist)

        /// <summary>
        /// 
        /// </summary>
        /// <param name="p_mlist"></param>
        [DllImport("libvlc")]
        internal static extern void libvlc_media_list_release(IntPtr p_mlist);

        #endregion

        #region internal static extern void libvlc_media_list_retain(IntPtr p_mlist)

        /// <summary>
        /// 
        /// </summary>
        /// <param name="p_mlist"></param>
        [DllImport("libvlc")]
        internal static extern void libvlc_media_list_retain(IntPtr p_mlist);

        #endregion

        #region internal static extern void libvlc_media_list_add_file_content(IntPtr p_mlist, string psz_uri, ref libvlc_exception_t p_exception)

        /// <summary>
        /// 
        /// </summary>
        /// <param name="p_mlist"></param>
        /// <param name="psz_uri"></param>
        /// <param name="p_exception"></param>
        [DllImport("libvlc")]
        internal static extern void libvlc_media_list_add_file_content(IntPtr p_mlist, string psz_uri, ref libvlc_exception_t p_exception);

        #endregion

        #region internal static extern void libvlc_media_list_set_media(IntPtr p_mlist, IntPtr p_media, ref libvlc_exception_t p_exception)

        /// <summary>
        /// 
        /// </summary>
        /// <param name="p_mlist"></param>
        /// <param name="p_media"></param>
        /// <param name="p_exception"></param>
        [DllImport("libvlc")]
        internal static extern void libvlc_media_list_set_media(IntPtr p_mlist, IntPtr p_media, ref libvlc_exception_t p_exception);

        #endregion

        #region internal static extern IntPtr libvlc_media_list_media(IntPtr p_mlist, ref libvlc_exception_t p_exception)

        /// <summary>
        /// 
        /// </summary>
        /// <param name="p_mlist"></param>
        /// <param name="p_exception"></param>
        /// <returns></returns>
        [DllImport("libvlc")]
        internal static extern IntPtr libvlc_media_list_media(IntPtr p_mlist, ref libvlc_exception_t p_exception);

        #endregion

        #region internal static extern void libvlc_media_list_add_media(IntPtr p_mlist, IntPtr p_media, ref libvlc_exception_t p_exception)

        /// <summary>
        /// 
        /// </summary>
        /// <param name="p_mlist"></param>
        /// <param name="p_media"></param>
        /// <param name="p_exception"></param>
        [DllImport("libvlc")]
        internal static extern void libvlc_media_list_add_media(IntPtr p_mlist, IntPtr p_media, ref libvlc_exception_t p_exception);

        #endregion

        #region internal static extern void libvlc_media_list_insert_media(IntPtr p_mlist, IntPtr p_media, ref libvlc_exception_t p_exception)

        /// <summary>
        /// 
        /// </summary>
        /// <param name="p_mlist"></param>
        /// <param name="p_media"></param>
        /// <param name="i_index"></param>
        /// <param name="p_exception"></param>
        [DllImport("libvlc")]
        internal static extern void libvlc_media_list_insert_media(IntPtr p_mlist, IntPtr p_media, int i_index, ref libvlc_exception_t p_exception);

        #endregion

        #region internal static extern void libvlc_media_list_remove_index(IntPtr p_mlist, int i_index, ref libvlc_exception_t p_exception)

        /// <summary>
        /// 
        /// </summary>
        /// <param name="p_mlist"></param>
        /// <param name="i_index"></param>
        /// <param name="p_exception"></param>
        [DllImport("libvlc")]
        internal static extern void libvlc_media_list_remove_index(IntPtr p_mlist, int i_index, ref libvlc_exception_t p_exception);

        #endregion

        #region internal static extern int libvlc_media_list_count(IntPtr p_mlist, ref libvlc_exception_t p_exception)

        /// <summary>
        /// 
        /// </summary>
        /// <param name="p_mlist"></param>
        /// <param name="p_exception"></param>
        /// <returns></returns>
        [DllImport("libvlc")]
        internal static extern int libvlc_media_list_count(IntPtr p_mlist, ref libvlc_exception_t p_exception);

        #endregion

        #region internal static extern IntPtr libvlc_media_list_item_at_index(IntPtr p_mlist, int i_index, ref libvlc_exception_t p_exception)

        /// <summary>
        /// 
        /// </summary>
        /// <param name="p_mlist"></param>
        /// <param name="i_index"></param>
        /// <param name="p_exception"></param>
        /// <returns></returns>
        [DllImport("libvlc")]
        internal static extern IntPtr libvlc_media_list_item_at_index(IntPtr p_mlist, int i_index, ref libvlc_exception_t p_exception);

        #endregion

        #region internal static extern int libvlc_media_list_index_of_item(IntPtr p_mlist, IntPtr p_media, ref libvlc_exception_t p_exception)

        /// <summary>
        /// 
        /// </summary>
        /// <param name="p_mlist"></param>
        /// <param name="p_media"></param>
        /// <param name="p_exception"></param>
        /// <returns></returns>
        [DllImport("libvlc")]
        internal static extern int libvlc_media_list_index_of_item(IntPtr p_mlist, IntPtr p_media, ref libvlc_exception_t p_exception);

        #endregion

        #region internal static extern bool libvlc_media_list_is_readonly(IntPtr p_mlist)

        /// <summary>
        /// 
        /// </summary>
        /// <param name="p_mlist"></param>
        /// <returns></returns>
        [DllImport("libvlc")]
        internal static extern bool libvlc_media_list_is_readonly(IntPtr p_mlist);

        #endregion

        #region internal static extern void libvlc_media_list_lock(IntPtr p_mlist)

        /// <summary>
        /// 
        /// </summary>
        /// <param name="p_mlist"></param>
        [DllImport("libvlc")]
        internal static extern void libvlc_media_list_lock(IntPtr p_mlist);

        #endregion

        #region internal static extern void libvlc_media_list_unlock(IntPtr p_mlist)

        /// <summary>
        /// 
        /// </summary>
        /// <param name="p_mlist"></param>
        [DllImport("libvlc")]
        internal static extern void libvlc_media_list_unlock(IntPtr p_mlist);

        #endregion

        #region internal static extern IntPtr libvlc_media_list_flat_view(IntPtr p_mlist, ref libvlc_exception_t p_exception)

        /// <summary>
        /// 
        /// </summary>
        /// <param name="p_mlist"></param>
        /// <param name="p_exception"></param>
        /// <returns></returns>
        [DllImport("libvlc")]
        internal static extern IntPtr libvlc_media_list_flat_view(IntPtr p_mlist, ref libvlc_exception_t p_exception);

        #endregion

        #region internal static extern IntPtr libvlc_media_list_hierarchical_view(IntPtr p_mlist, ref libvlc_exception_t p_exception)

        /// <summary>
        /// 
        /// </summary>
        /// <param name="p_mlist"></param>
        /// <param name="p_exception"></param>
        /// <returns></returns>
        [DllImport("libvlc")]
        internal static extern IntPtr libvlc_media_list_hierarchical_view(IntPtr p_mlist, ref libvlc_exception_t p_exception);

        #endregion

        #region internal static extern IntPtr libvlc_media_list_hierarchical_node_view(IntPtr p_mlist, ref libvlc_exception_t p_exception)

        /// <summary>
        /// 
        /// </summary>
        /// <param name="p_mlist"></param>
        /// <param name="p_exception"></param>
        /// <returns></returns>
        [DllImport("libvlc")]
        internal static extern IntPtr libvlc_media_list_hierarchical_node_view(IntPtr p_mlist, ref libvlc_exception_t p_exception);

        #endregion

        #region internal static extern IntPtr libvlc_media_list_event_manager(IntPtr p_mlist, ref libvlc_exception_t p_exception)
